# nitpik

./: .tarpaulin.toml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  build.rs  install.sh
.github/skills/write-docs/: SKILL.md
.github/workflows/: docker.yml  release.yml  wiki-sync.yml
docs/: 01-Installation.md  02-Quick-Start.md  03-Providers.md  04-Diff-Inputs.md  05-Reviewer-Profiles.md  06-Custom-Profiles.md  07-Agentic-Mode.md  08-Output-Formats.md  09-How-Reviews-Work.md  10-Caching.md  11-Secret-Scanning.md  12-Project-Docs.md  12-Threat-Scanning.md  13-Configuration.md  13-Project-Docs.md  14-CI-Integration.md  14-Configuration.md  15-CI-Integration.md  15-CLI-Reference.md  16-CLI-Reference.md  16-Troubleshooting.md  17-Licensing.md  17-Troubleshooting.md  18-Licensing.md  18-Threat-Scanning.md  Agentic-Mode.md  CI-Integration.md  CLI-Reference.md  Caching.md  Configuration.md  Custom-Profiles.md  Diff-Inputs.md  Home.md  How-Reviews-Work.md  Installation.md  Licensing.md  Output-Formats.md  Project-Docs.md  Providers.md  Quick-Start.md  (+4 more)
src/: ci.rs  constants.rs  env.rs  http.rs  lib.rs  main.rs
src/agents/: auto.rs  mod.rs  parser.rs
src/agents/builtin/: architect.md  backend.md  frontend.md  general.md  mod.rs  security.md
src/cache/: mod.rs  store.rs
src/cli/: args.rs  mod.rs
src/config/: loader.rs  mod.rs
src/context/: files.rs  mod.rs  project_docs.rs
src/diff/: chunker.rs  file.rs  git.rs  mod.rs  parser.rs  scanner.rs
src/license/: mod.rs
src/models/: agent.rs  context.rs  diff.rs  finding.rs  mod.rs
src/orchestrator/: dedup.rs  mod.rs  prompt.rs  scope.rs
src/output/: bitbucket.rs  checkstyle.rs  escape.rs  forgejo.rs  github.rs  gitlab.rs  json.rs  mod.rs  terminal.rs
src/progress/: mod.rs
src/providers/: mod.rs  response.rs  rig.rs
src/security/: entropy.rs  gitleaks_rules.toml  mod.rs  rules.rs  scanner.rs
src/telemetry/: mod.rs
src/threat/: mod.rs  rules.rs  scanner.rs  threat_rules.toml  triage.rs  triage_prompt.md
src/tools/: custom_command.rs  list_directory.rs  mod.rs  read_file.rs  search_text.rs
src/update/: mod.rs
tests/: cli_commands.rs  e2e_profiles.rs  mock_llm.rs  snapshot_renderers.rs
tests/fixtures/: expected_bitbucket_output.json  expected_checkstyle_output.xml  expected_forgejo_output.json  expected_github_output.txt  expected_gitlab_output.json  expected_json_output.json
tests/fixtures/e2e/architect/base/: service.go
tests/fixtures/e2e/architect/changeset/: service.go
tests/fixtures/e2e/auto/base/: api.rs
tests/fixtures/e2e/auto/changeset/: App.tsx  api.rs
tests/fixtures/e2e/backend/base/: handler.rs
tests/fixtures/e2e/backend/changeset/: handler.rs
tests/fixtures/e2e/cache_prior/base/: calculator.rs
tests/fixtures/e2e/cache_prior/changeset_v1/: calculator.rs
tests/fixtures/e2e/cache_prior/changeset_v2/: calculator.rs
tests/fixtures/e2e/custom_profile/: reviewer.md
tests/fixtures/e2e/custom_tool/: reviewer.md
tests/fixtures/e2e/frontend/base/: UserCard.tsx
tests/fixtures/e2e/frontend/changeset/: UserCard.tsx
tests/fixtures/e2e/security/base/: auth.py
tests/fixtures/e2e/security/changeset/: auth.py
tools/: issue_license.rs  keygen.rs
